# subversion

./: .editorconfig  .svnignore  .ycm_extra_conf.py  AUTHORS  BRANCH-MILESTONES  BRANCH-NOTES  BRANCH-README  BRANCH_README  BUGS  CHANGES  CMakeLists.txt  COMMITTERS  COPYING  FAILING-TESTS  FIRST-AID-KIT  HACKING  IDEAS  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  NOTICE  PORTING  README  README.TXT  README.branch  SConstruct  STACK  STATUS  TASKS  TODO  TODO - ra_serf-auth  TODO-1.5-branch  TODO-1.6  TODO-issue-2897.branch  TODO-record_exact_merge_and_commit_revs.branch  TODO.branch  TRANSLATING  aclocal.m4  (+32 more)
contrib/server-side/svnstsw/: AUTHORS  NEWS  README  autogen.sh  configure.ac
contrib/server-side/svnstsw/conf/: stsw_lib_apr.m4  stsw_prog_doxygen.m4
contrib/server-side/svnstsw/doc/: Doxyfile-html.in  Makefile.am
contrib/server-side/svnstsw/doc/man/: libsvnstsw.3.in  svnstsw.8.in  svnstsw_exec_svnserve.3.in  svnstsw_fso_is_changeable.3.in  svnstsw_get_tunnel_user_name.3.in
contrib/server-side/svnstsw/include/svnstsw/: exec_svnserve.h  get_tunnel_user_name.h  svnstsw.h
contrib/server-side/svnstsw/src/: Makefile.am  exec_svnserve.c  fso_is_changeable.c  get_tunnel_user_name.c  main.c  svnstsw_compat.c
subversion/bindings/java/javahl/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README-HIGH-LEVEL-API.txt  autogen.sh  configure.in
subversion/bindings/java/javahl/cls/: Makefile.am
subversion/bindings/java/javahl/doc/: Makefile.am
subversion/bindings/java/javahl/native/: BlameCallback.cpp  BlameCallback.h  CommitMessage.cpp  CommitMessage.h  CopySources.cpp  CopySources.h  DiffSummaryReceiver.cpp  EnumMapper.cpp  EnumMapper.h  InfoCallback.cpp  InfoCallback.h  Inputer.cpp  Inputer.h  JNIByteArray.cpp  JNIByteArray.h  JNICriticalSection.cpp  JNICriticalSection.h  JNIMutex.cpp  JNIMutex.h  JNIStackElement.cpp  JNIStackElement.h  JNIStringHolder.cpp  JNIStringHolder.h  JNIThreadData.cpp  JNIThreadData.h  JNIUtil.cpp  JNIUtil.h  LockCallback.cpp  LockCallback.h  LogMessageCallback.cpp  LogMessageCallback.h  Makefile.am  MessageReceiver.cpp  MessageReceiver.h  Notify.cpp  Notify.h  Notify2.cpp  Notify2.h  Outputer.cpp  Outputer.h  (+33 more)
subversion/bindings/java/javahl/src/: Makefile.am
subversion/bindings/java/javahl/src/org/tigris/subversion/javahl/: BlameCallback.java  BlameCallbackImpl.java  ChangePath.java  ClientException.java  CommitItem.java  CommitItemStateFlags.java  CommitMessage.java  CopySource.java  Depth.java  DiffSummary.java  DirEntry.java  Info.java  Info2.java  InputInterface.java  JNIError.java  Lock.java  LockCallback.java  LockStatus.java  LogMessage.java  MergeInfo.java  NativeException.java  NativeResources.java  NodeKind.java  Notify.java  Notify2.java  NotifyAction.java  NotifyStatus.java  OutputInterface.java  Path.java  ProgressEvent.java  PromptUserPassword.java  PromptUserPassword2.java  PromptUserPassword3.java  PropertyData.java  ProplistCallback.java  Revision.java  RevisionKind.java  (+14 more)
subversion/client/tests/: Makefile.am  svn-test.sh  svn-test2.sh
subversion/libsvn_fs/: .svnignore  Makefile.am  TODO  access.c  caching.c  clone.c  clone.h  clones-table.c  clones-table.h  cmpilato-TODO  convert-size.c  convert-size.h  copies-table.c  copies-table.h  dag.c  dag.h  dbt.c  dbt.h  delta.c  deltify.c  deprecated.c  dir.c  dir.h  editor.c  err.c  err.h  file.c  file.h  fs-loader.c  fs-loader.h  fs.c  fs.h  fs_loader.c  fs_loader.h  fs_skels.c  fs_skels.h  hooks.c  hooks.h  id.c  id.h  (+46 more)
subversion/libsvn_fs/bdb/: bdb-err.c  bdb-err.h  bdb-fs.c  bdb-fs.h  bdb_compat.c  bdb_compat.h  changes-table.c  changes-table.h  copies-table.c  copies-table.h  dbt.c  dbt.h  nodes-table.c  nodes-table.h  reps-table.c  reps-table.h  rev-table.c  rev-table.h  strings-table.c  strings-table.h  txn-table.c  txn-table.h  uuids-table.c  uuids-table.h
subversion/libsvn_fs/notes/: fs-history  structure
subversion/libsvn_fs/tests/: Makefile.am  fs-test.c  fs_test.dsp  run-fs-tests.sh  skel-test.c  skel_test.dsp
subversion/libsvn_fs/util/: fs_skels.c  fs_skels.h  skel.c  skel.h
subversion/libsvn_ra_dav/: .svnignore  DESIGN-NOTES.txt  Makefile.am  README  commit.c  fetch.c  file_revs.c  libsvn_ra_dav.dsp  lock.c  log.c  merge.c  mergeinfo.c  options.c  props.c  protocol  ra_dav.h  ra_session.h  replay.c  session.c  util.c
subversion/libsvn_ra_dav/tests/: Makefile.am  ra-commit.c  ra-dav-test.c
subversion/libsvn_repos/: .svnignore  Makefile.am  README  ancestry.c  authz.c  authz.h  authz_info.c  authz_parse.c  authz_pool.c  checkout.c  commit.c  commit_editor.c  compat.c  config_file.c  config_file.h  config_pool.c  delta.c  deprecated.c  dump.c  dump.c.2.svnpatch.rej  dump.c.svnpatch.rej  dump_editor.c  fs-wrap.c  hooks.c  hooks.txt  libsvn_repos.dsp  list.c  load-fs-vtable.c  load.c  lock.c  log.c  node_tree.c  notify.c  obliterate.c  replay.c  reporter.c  repos.c  repos.h  repos_pool.c  rev_hunt.c
subversion/mod_dav_svn/: .svnignore  Makefile.am  activity.c  authz.c  dav_svn.h  deadprops.c  file_revs.c  lang.c  liveprops.c  lock.c  log.c  merge.c  mergeinfo.c  mirror.c  mod_dav_svn.c  mod_dav_svn.dsp  replay.c  repos.c  status.c  update.c  util.c  version.c
subversion/mod_dav_svn/posts/: create-transaction.c  create_txn.c
subversion/mod_dav_svn/reports/: dated-rev.c  deleted-rev.c  file-revs.c  get-location-segments.c  get-locations.c  get-locks.c  inherited-props.c  list.c  log.c  mergeinfo.c  replay.c  update.c
subversion/mod_dav_svn/static/: config.m4
subversion/tests/libsvn_fs/: .svnignore  Makefile.am  changes-test.c  changes_test.dsp  dir-delta-editor.c  dir-delta-editor.h  fs-sequential-test.c  fs-test.c  fs_test.dsp  key-test.c  key_test.dsp  locks-test.c  run-fs-tests.py  run-fs-tests.sh  skel-test.c  skel_test.dsp  strings-reps-test.c  strings_reps_test.dsp
subversion/tests/libsvn_repos/: .svnignore  Makefile.am  authz-test.c  authz.groups  authz.rules  dir-delta-editor.c  dir-delta-editor.h  dump-load-test.c  md5args.c  repos-test.c  repos_test.dsp  run-repos-tests.py  run-repos-tests.sh  tests_libsvn_repos_test.dsp
(+7154 files in other folders)
